fixed nav li a margintop to align with juul logo left side

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-    width: 100%;
-}
-
 ul {
     width: 100%;
     list-style-type: none;
@@ -13,23 +9,27 @@ ul {
 
 li {
     float: left;
+    padding-top: 2%;
 }
 
 li a {
+    margin-top: 28px;
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 26px;
     text-decoration: none;
 }
 
-/* li a:hover {
+/*
+li a:hover {
     background-color: #111;
 } */
 
 .logo-img {
-    width: 50%;
-    height: 50%;
+    width: 60%;
+    height: 60%;
+    margin-bottom: 10%;
 }
 
 .active {
